tests/invalid/Parsing_Invalid_31.whiley
method m() :
    int b = 1

method main() :
    int a = m()
